--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "mv3-parcel-webext-template",
-  "description": "Extension Description",
+  "name": "Disney Plus Ratings",
+  "description": "Adds IMDB rating to Disney +",
   "version": "0.0.0",
   "icons": {
     "16": "images/icon256.png?width=16",
