--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "zip-lib": "^0.7.3"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "dexie": "^3.2.4"
   }
 }
