--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/onikienko/disney-plus-ratings-extension#readme",
   "devDependencies": {
     "@parcel/config-webextension": "^2.10.1",
+    "@release-it/conventional-changelog": "^7.0.2",
     "@types/chrome": "^0.0.248",
     "@types/fs-extra": "^11.0.3",
     "dot-json": "^1.3.0",
